syntax = "proto3";

package common;

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_DB_ERROR = 1;
  ERROR_CODE_DB_FIELD_SCAN_ERROR = 2;
  ERROR_CODE_MULTIPLE_VALUES_FOUND = 3;
  ERROR_CODE_DUPLICATE_KEY = 4;
  ERROR_CODE_NOT_FOUND = 5;
  ERROR_CODE_STREAMING_ERROR = 6;
  ERROR_CODE_INVALID_ARGUMENT = 7;
}

message Error {
  ErrorCode code = 1;
  string package = 2;
  string text = 3;
}